fix mode switch and toTop button from being overlapped on responsive views

--- a/css/custom.css
+++ b/css/custom.css
@@ -34,6 +34,7 @@ html #mode .dark {
     position: fixed;
     right: 16px;
     top: 16px;
+    z-index: 1;
     border-radius: 16px;
     line-height: 0;
 }
